--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Lugx Gaming Template - Contact Page</title>
     <!-- CSS Files -->
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="assets/js/contact.js"></script>
   </head>
   <body>
     <!-- ***** Header Area Start ***** -->
