--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@
     <title>Lugx Gaming Template - Contact Page</title>
     <!-- CSS Files -->
     <link rel="stylesheet" href="assets/css/styles.css">
-    <script src="assets/js/contact.js"></script>
   </head>
   <body>
     <!-- ***** Header Area Start ***** -->
@@ -20,31 +19,25 @@
                 <img src="assets/images/logo.png" alt="" style="width: 158px;">
               </a>
               <!-- ***** Logo End ***** -->
-<!-- ***** Menu Start ***** -->
-<ul class="nav">
-  <li>
-    <a href="index.html">Home</a>
-  </li>
-  <li>
-    <a href="on-line-games.html">Online Games</a>
-  </li>
-  <li>
-    <a href="contact.html" class="active">Contact Us</a>
-  </li>
-  <!-- Modified search field and button to format correctly -->
-  <li class="search-item">
-    <div class="search-input">
-      <form id="search" action="#">
-        <input type="text" placeholder="Type Something" id="searchText" name="searchKeyword" />
-      </form>
-    </div>
-  </li>
-  <li>
-    <button type="submit" role="button">Search Now</button>
-  </li>
-
-</ul>
-<!-- ***** Menu End ***** -->
+              <!-- ***** Menu Start ***** -->
+              <ul class="nav">
+                <li>
+                  <a href="index.html">Home</a>
+                </li>
+                <li>
+                  <a href="on-line-games.html">Online Games</a>
+                </li>
+                <li>
+                  <a href="contact.html">Contact Us</a>
+                </li>
+              </ul>
+              <div class="search-input">
+                <form id="search" action="#">
+                  <input type="text" placeholder="Type Something" id="searchText" name="searchKeyword" />
+                  <button role="button">Search Now</button>
+                </form>
+              </div>
+              <!-- ***** Menu End ***** -->
             </nav>
           </div>
         </div>
@@ -69,7 +62,7 @@
                 <h6>Contact Us</h6>
                 <h2>Say Hello!</h2>
               </div>
-              <p style="color: rgb(0, 0, 0);text-align: justify;">LUGX is a free, online game website designed to allow simple online games to be added. Currently, Tic-Tac-Toe and Guess a Number! are available. </p>
+              <p>LUGX is a free, online game website designed to allow simple online games to be added. Currently, Tic-Tac-Toe and Guess a Number! are available. </p>
               <ul>
                 <li>
                   <span>Address</span> Huntsville, AL 35807 United States
