--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
     <title>Lugx Gaming</title>
     <!-- CSS Files -->
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -20,33 +19,25 @@
                 <img src="assets/images/logo.png" alt="" style="width: 158px;">
               </a>
               <!-- ***** Logo End ***** -->
-    <!-- ***** Menu Start ***** -->
-      <ul class="nav">
-        <li>
-          <a href="index.html" class="active">Home</a>
-        </li>
-        <li>
-          <a href="on-line-games.html" >Online Games</a>
-        </li>
-        <li>
-          <a href="contact.html">Contact Us</a>
-        </li>
-        <!-- Modified search field and button to format correctly -->
-        <li class="search-item">
-          <div class="search-input">
-            <form id="search" action="#">
-              <input type="text" placeholder="Type Something" id="searchText" name="searchKeyword" />
-            </form>
-          </div>
-        </li>
-        <li>
-          <button type="submit" role="button">Search Now</button>
-        </li>
-      </ul>
-    <!-- ***** Menu End ***** -->
-
-
-
+              <!-- ***** Menu Start ***** -->
+              <ul class="nav">
+                <li>
+                  <a href="index.html">Home</a>
+                </li>
+                <li>
+                  <a href="on-line-games.html">Online Games</a>
+                </li>
+                <li>
+                  <a href="contact.html">Contact Us</a>
+                </li>
+              </ul>
+              <div class="search-input">
+                <form id="search" action="#">
+                  <input type="text" placeholder="Type Something" id="searchText" name="searchKeyword" />
+                  <button role="button">Search Now</button>
+                </form>
+              </div>
+              <!-- ***** Menu End ***** -->
             </nav>
           </div>
         </div>
@@ -83,10 +74,10 @@
           <div class="col-lg-3 col-md-6">
             <div class="item">
               <div class="down-content">
-                <span class="category">Guessing</span>
+                <span class="category">Action</span>
                 <h4>Guess a Number</h4>
                 <a href="gan.html">
-                  <img src="assets/images/gan_background.jpg">                 
+                  <i class="fa fa-shopping-bag"></i>
                 </a>
               </div>
             </div>
@@ -95,10 +86,10 @@
             <div class="item">
               <div class="thumb"></div>
               <div class="down-content">
-                <span class="category">Strategy</span>
+                <span class="category">Action</span>
                 <h4>Tic-Tac-Toe</h4>
-                <a href="tic-tac-toe.html">
-                  <img src="assets/images/tic-tac-toe_graphic.jpg">  
+                <a href="ttt_game.html">
+                  <i class="fa fa-shopping-bag"></i>
                 </a>
                 <!-- Link to Tic-Tac-Toe game page -->
               </div>
