--- a/on-line-games.html
+++ b/on-line-games.html
@@ -5,58 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Lugx Gaming - Product Detail</title>
-
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/styles.css">
   </head>
   <body>
-
     <!-- ***** Header Area Start ***** -->
     <header class="header-area header-sticky">
       <div class="container">
         <div class="row">
           <div class="col-12">
             <nav class="main-nav">
-
               <!-- ***** Logo Start ***** -->
               <a href="index.html" class="logo">
                 <img src="assets/images/logo.png" alt="" style="width: 158px;">
               </a>
               <!-- ***** Logo End ***** -->
-               
-<!-- ***** Menu Start ***** -->
-<ul class="nav">
-  <li>
-    <a href="index.html">Home</a>
-  </li>
-  <li>
-    <a href="on-line-games.html" class="active">Online Games</a>
-  </li>
-  <li>
-    <a href="contact.html">Contact Us</a>
-  </li>
-  <!-- Modified search field and button to format correctly -->
-  <li class="search-item">
-    <div class="search-input">
-      <form id="search" action="#">
-        <input type="text" placeholder="Type Something" id="searchText" name="searchKeyword" />
-      </form>
-    </div>
-  </li>
-  <li>
-    <button type="submit" role="button">Search Now</button>
-  </li>
-
-</ul>
-<!-- ***** Menu End ***** -->
-
+              <!-- ***** Menu Start ***** -->
+              <ul class="nav">
+                <li>
+                  <a href="index.html">Home</a>
+                </li>
+                <li>
+                  <a href="on-line-games.html">Online Games</a>
+                </li>
+                <li>
+                  <a href="contact.html">Contact Us</a>
+                </li>
+              </ul>
+              <div class="search-input">
+                <form id="search" action="#">
+                  <input type="text" placeholder="Type Something" id="searchText" name="searchKeyword" />
+                  <button role="button">Search Now</button>
+                </form>
+              </div>
+              <!-- ***** Menu End ***** -->
             </nav>
           </div>
         </div>
       </div>
     </header>
     <!-- ***** Header Area End ***** -->
-
     <div class="page-heading header-text">
       <div class="container">
         <div class="row">
@@ -75,8 +63,10 @@
             </div>
           </div>
           <div class="col-lg-6 align-self-center">
-            <h4>Tic-Tac-Toe!</h4>
-            <p>Tic-Tac-Toe description goes here. Use your prefered tic-tac-toe graphic as image source.</p>
+            <h4>
+              <a href="ttt_game.html">Tic-Tac-Toe!</a>
+            </h4>
+            <p>Tic-tac-toe is a paper-and-pencil game for two players who take turns marking the spaces in a three-by-three grid, one with Xs and the other with Os. A player wins when they mark all three spaces of a row, column, or diagonal of the grid, whereupon they traditionally draw a line through those three marks to indicate the win. It is a solved game, with a forced draw assuming best play from both players.</p>
           </div>
           <div class="col-lg-12">
             <div class="sep"></div>
