--- a/gan.html
+++ b/gan.html
@@ -25,24 +25,19 @@
                   <a href="index.html">Home</a>
                 </li>
                 <li>
-                  <a href="on-line-games.html" >Online Games</a>
+                  <a href="on-line-games.html">Online Games</a>
                 </li>
                 <li>
                   <a href="contact.html">Contact Us</a>
                 </li>
-                <!-- Modified search field and button to format correctly -->
-                <li class="search-item">
-                  <div class="search-input">
-                    <form id="search" action="#">
-                    <input type="text" placeholder="Type Something" id="searchText" name="searchKeyword" />
-                    </form>
-                  </div>
-                </li>
-                <li>
-                  <button type="submit" role="button">Search Now</button>
-                </li>
               </ul>
-              <!-- ***** Menu End ***** -->            </nav>
+              <div class="search-input">
+                <form id="search" action="#">
+                  <input type="text" placeholder="Type Something" id="searchText" name="searchKeyword" />
+                  <button role="button">Search Now</button>
+                </form>
+              </div>
+              <!-- ***** Menu End ***** -->
           </div>
         </div>
       </div>
